plugins {
    id 'java'
    id 'war'
    id 'io.spring.dependency-management' version '1.1.0'
}
group = 'ru.clevertec.ecl'
version = '1.0.0'
sourceCompatibility = '17'


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework:spring-context:6.0.7'
    implementation 'org.springframework:spring-web:6.0.7'
    implementation 'org.springframework:spring-beans:6.0.7'
    implementation 'org.springframework:spring-core:6.0.7'
    implementation 'org.springframework:spring-webmvc:6.0.7'
    implementation 'org.springframework:spring-jdbc:6.0.7'

    implementation 'org.flywaydb:flyway-core:9.16.1'
    implementation 'javax.servlet:jstl:1.2'
    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    implementation 'org.mapstruct:mapstruct-jdk8:1.5.3.Final'

    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
    implementation 'org.hibernate:hibernate-validator:8.0.0.Final'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.14.2'

    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    compileOnly 'org.projectlombok:lombok:1.18.26'

    runtimeOnly 'com.h2database:h2:2.1.214'
    runtimeOnly 'org.postgresql:postgresql:42.6.0'

    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.springframework:spring-test:6.0.7'
}

tasks.named('test') {
    useJUnitPlatform()
}
